--- a/parts/meets.jade
+++ b/parts/meets.jade
@@ -58,6 +58,8 @@ g#js-meets.h-g1
       path(d="M#{x1},#{y1} L#{x2},#{y2}", opacity="1", stroke-dashoffset="#{burstLen+1}", stroke-dasharray="#{burstLen+1}", stroke="url(#owls-pattern)", stroke-width="8", stroke-linecap="round")
       - angle = angle + step
 
+  include smoke.svg
+
   //- mask#blow-mask
   g#js-meets-blow.h-g
     - var burstLen = 250, burstStart = 0
