add smoke spriter

--- a/css/main.styl
+++ b/css/main.styl
@@ -39,6 +39,11 @@ svg
     display none
     fill white
 
+.smoke
+  g
+    display none
+    // fill #f1f1f1
+
 .caleydoscope
   path
     opacity 0
