--- a/index.jade
+++ b/index.jade
@@ -19,6 +19,7 @@ html
           include parts/logo.svg
           include parts/waves.svg
           include parts/fish
+          include parts/mushroom.svg
 
     script(src="bower_components/jquery/dist/jquery.js")
     script(src="bower_components/velocity/jquery.velocity.min.js")
