--- a/index.jade
+++ b/index.jade
@@ -32,6 +32,7 @@ html
     script(src="js/meets.js")
     script(src="js/logo.js")
     script(src="js/fish.js")
+    script(src="js/mushroom.js")
     script(src="js/main.js")
 
 
