--- a/index.jade
+++ b/index.jade
@@ -16,10 +16,11 @@ html
           include parts/caleydoscope
           include parts/svg
           include parts/triangles
-          include parts/logo.svg
-          include parts/waves.svg
-          include parts/fish
-          include parts/mushroom.svg
+          include parts/tri-bits
+          //- include parts/logo.svg
+          //- include parts/waves.svg
+          //- include parts/fish
+          //- include parts/mushroom.svg
 
     script(src="bower_components/jquery/dist/jquery.js")
     script(src="bower_components/velocity/jquery.velocity.min.js")
