--- a/css/main.styl
+++ b/css/main.styl
@@ -12,6 +12,14 @@
 html, body
   rect 100%
 
+.tri-bits
+  g
+    display none
+  path
+    display none
+    fill deeppink
+
+
 .container
   rect 100%
   max-width 1280px
