--- a/index.jade
+++ b/index.jade
@@ -34,6 +34,7 @@ html
     script(src="js/logo.js")
     script(src="js/fish.js")
     script(src="js/mushroom.js")
+    script(src="js/tribits.js")
     script(src="js/main.js")
 
 
