--- a/parts/tri-bits.jade
+++ b/parts/tri-bits.jade
@@ -1,4 +1,4 @@
-g#js-tri-bits1(transform="translate(350,595)")
+g#js-tri-bits1(transform="translate(1050,595)").tri-bits
   g
     path(d='M9.66407436,7.0137519 L4.98144531,0.208007812 L0.272595789,7.00263183 L9.66407436,7.0137519 Z', fill='#D8D8D8')
   g
