--- a/css/main.css
+++ b/css/main.css
@@ -1645,6 +1645,13 @@ body {
   width: 100%;
   height: 100%;
 }
+.tri-bits g {
+  display: none;
+}
+.tri-bits path {
+  display: none;
+  fill: #ff1493;
+}
 .container {
   width: 100%;
   height: 100%;
