--- a/css/main.styl
+++ b/css/main.styl
@@ -17,7 +17,11 @@ html, body
     display none
   path
     display none
-    fill deeppink
+    // fill deeppink
+
+  // &--2
+  //   path
+  //     fill orange
 
 
 .container
