--- a/index.jade
+++ b/index.jade
@@ -17,10 +17,10 @@ html
           include parts/svg
           include parts/triangles
           include parts/tri-bits
-          //- include parts/logo.svg
-          //- include parts/waves.svg
-          //- include parts/fish
-          //- include parts/mushroom.svg
+          include parts/logo.svg
+          include parts/waves.svg
+          include parts/fish
+          include parts/mushroom.svg
 
     script(src="bower_components/jquery/dist/jquery.js")
     script(src="bower_components/velocity/jquery.velocity.min.js")
