--- a/parts/fish.jade
+++ b/parts/fish.jade
@@ -9,7 +9,9 @@ g#js-fish-scene.h-g
     //- g(transform="translate(#{translateX-30},#{translateY-150})")
     rect(width="100", height="#{height}", stroke="deeppink", fill="none", transform="translate(25,140)")
 
-  g(transform="rotate(-25) translate(100,50)")
+  
+  //- g(transform="rotate(-25) translate(100,50)")
+  g(transform="rotate(0) translate(550,-250)")
     g#js-fish-wrapper(clip-path="url(#fish-clip)", transform="translate(#{translateX},#{translateY})", opacity="1")
       //- rect(width="1280", height="900", fill="deeppink")
       //- 30,75
