--- a/parts/tri-bits.jade
+++ b/parts/tri-bits.jade
@@ -1,4 +1,4 @@
-- var color = ['#E01A3B', '#9EA64D', '#FFC9E3', '#FCFFE6', '#D1D1B3', '#FF1493']
+- var color = ['#E01A3B', '#9EA64D', '#FCFFE6', '#FF1493']
 
 - function randColor() {
 - return color[rand(0, color.length)]
