--- a/parts/meets.jade
+++ b/parts/meets.jade
@@ -47,7 +47,7 @@ defs
 - var patterns = ['#flowers-cream-pattern', '#owls-pattern', '#owls-pattern2', '#caleydoscope-pattern', '#wood-pattern', '#blue-flowers-pattern', '#rose-pattern' ]
 
 - function randPattern() {
-- return patterns[rand(0, patterns.length)]
+- return patterns[rand(0, patterns.length-1)]
 -}
 
 
