--- a/parts/tri-bits.jade
+++ b/parts/tri-bits.jade
@@ -1,7 +1,7 @@
-- var color = ['#E01A3B', '#9EA64D', '#FCFFE6', '#FF1493']
+- var color = ['#E01A3B', '#9EA64D', '#FF1493', '#E01A3B', '#9EA64D']
 
 - function randColor() {
-- return color[rand(0, color.length)]
+- return color[rand(0, color.length-1)]
 -}
 
 g#js-entire-tri-bits
