--- a/index.jade
+++ b/index.jade
@@ -22,19 +22,19 @@ html
           include parts/fish
           include parts/mushroom.svg
 
-    script(src="js/main.min.js")
-    //- script(src="bower_components/jquery/dist/jquery.js")
-    //- script(src="bower_components/velocity/jquery.velocity.min.js")
-    //- script(src="js/helpers.js")
-    //- script(src="js/spriter.js")
-    //- script(src="js/waves.js")
-    //- script(src="js/caleydoscope.js")
-    //- script(src="js/triangles.js")
-    //- script(src="js/svg.js")
-    //- script(src="js/meets.js")
-    //- script(src="js/logo.js")
-    //- script(src="js/fish.js")
-    //- script(src="js/mushroom.js")
-    //- script(src="js/tribits.js")
-    //- script(src="js/main.js")
+    //- script(src="js/main.min.js")
+    script(src="bower_components/jquery/dist/jquery.js")
+    script(src="bower_components/velocity/jquery.velocity.min.js")
+    script(src="js/helpers.js")
+    script(src="js/spriter.js")
+    script(src="js/waves.js")
+    script(src="js/caleydoscope.js")
+    script(src="js/triangles.js")
+    script(src="js/svg.js")
+    script(src="js/meets.js")
+    script(src="js/logo.js")
+    script(src="js/fish.js")
+    script(src="js/mushroom.js")
+    script(src="js/tribits.js")
+    script(src="js/main.js")
 
