--- a/parts/meets.jade
+++ b/parts/meets.jade
@@ -13,7 +13,7 @@ defs
   pattern#cheese-pattern(width='400', height='300', patternunits='userSpaceOnUse', y='200')
     image#js-cheese-image(width='400', height='300', xlink:href='css/i/cheese.jpg')
   pattern#caleydoscope-pattern(width='150', height='150', patternunits='userSpaceOnUse')
-    image#js-caleydoscope-image(width='300', height='300', xlink:href='css/i/caleydoscope.png', x='-150', y='-150')
+    image#js-caleydoscope-image(width='300', height='300', xlink:href='css/i/caleydoscope.jpg', x='-150', y='-150')
   pattern#caleydoscope-pattern2(width='150', height='150', patternunits='userSpaceOnUse')
     image#js-caleydoscope-image2(width='300', height='300', xlink:href='css/i/caleydoscope.png', x='-150', y='-150')
     //- image#js-caleydoscope-image2(width='300', height='300', xlink:href='css/i/caleydoscope.png', x='-150', y='-150')
@@ -94,8 +94,6 @@ g#js-meets.h-g1
         - var y2 = centerY + Math.sin(angle)*radius2
         circle(cx="#{x1}", cy="#{y1}", data-x="#{x2-640}", data-y="#{y2-450}", fill="url(#wood-pattern)", r="50")
         - angle = angle + step
-
-
 
   //- rect(width="1280", height="900", fill="url(#space-dogs-pattern)", mask="url(#meets-mask)")
   //- rect(width="1280", height="900", fill="url(#wood-pattern)", mask="url(#blow-mask)")
