--- a/parts/meets.jade
+++ b/parts/meets.jade
@@ -12,21 +12,21 @@ defs
     image#js-owls-image(width='400', height='300', xlink:href='css/i/owls.jpg')
   pattern#cheese-pattern(width='400', height='300', patternunits='userSpaceOnUse', y='200')
     image#js-cheese-image(width='400', height='300', xlink:href='css/i/cheese.jpg')
-  pattern#caleydoscope-pattern(width='150', height='150', patternunits='userSpaceOnUse')
-    image#js-caleydoscope-image(width='300', height='300', xlink:href='css/i/caleydoscope.jpg', x='-150', y='-150')
-  pattern#caleydoscope-pattern2(width='150', height='150', patternunits='userSpaceOnUse')
-    image#js-caleydoscope-image2(width='300', height='300', xlink:href='css/i/caleydoscope.png', x='-150', y='-150')
-    //- image#js-caleydoscope-image2(width='300', height='300', xlink:href='css/i/caleydoscope.png', x='-150', y='-150')
-  pattern#caleydoscope-pattern3(width='150', height='150', patternunits='userSpaceOnUse')
-    image#js-caleydoscope-image3(width='300', height='300', xlink:href='css/i/caleydoscope2.jpg', x='-150', y='-150')
-  pattern#caleydoscope-pattern4(width='150', height='150', patternunits='userSpaceOnUse')
-    image#js-caleydoscope-image4(width='300', height='300', xlink:href='css/i/caleydoscope2.jpg', x='-150', y='-150')
+  //- pattern#caleydoscope-pattern(width='150', height='150', patternunits='userSpaceOnUse')
+  //-   image#js-caleydoscope-image(width='300', height='300', xlink:href='css/i/caleydoscope.jpg', x='-150', y='-150')
+  //- pattern#caleydoscope-pattern2(width='150', height='150', patternunits='userSpaceOnUse')
+  //-   image#js-caleydoscope-image2(width='300', height='300', xlink:href='css/i/caleydoscope.jpg', x='-150', y='-150')
+  //-   //- image#js-caleydoscope-image2(width='300', height='300', xlink:href='css/i/caleydoscope.png', x='-150', y='-150')
+  //- //- pattern#caleydoscope-pattern3(width='150', height='150', patternunits='userSpaceOnUse')
+  //- //-   image#js-caleydoscope-image3(width='300', height='300', xlink:href='css/i/caleydoscope2.jpg', x='-150', y='-150')
+  //- pattern#caleydoscope-pattern4(width='150', height='150', patternunits='userSpaceOnUse')
+  //-   image#js-caleydoscope-image4(width='300', height='300', xlink:href='css/i/caleydoscope2.jpg', x='-150', y='-150')
     
-    //- image#js-caleydoscope-image4(width='300', height='300', xlink:href='css/i/caleydoscope2.jpg', x='-150', y='-150')
-  pattern#caleydoscope-pattern5(width='150', height='150', patternunits='userSpaceOnUse')
-    image#js-caleydoscope-image5(width='300', height='300',xlink:href='css/i/caleydoscope4.jpg', x='-150', y='-150')
-  pattern#caleydoscope-pattern6(width='150', height='150', patternunits='userSpaceOnUse')
-    image#js-caleydoscope-image6(width='300', height='300',xlink:href='css/i/caleydoscope5.jpg', x='-150', y='-150')
+  //-   //- image#js-caleydoscope-image4(width='300', height='300', xlink:href='css/i/caleydoscope2.jpg', x='-150', y='-150')
+  //- pattern#caleydoscope-pattern5(width='150', height='150', patternunits='userSpaceOnUse')
+  //-   image#js-caleydoscope-image5(width='300', height='300',xlink:href='css/i/caleydoscope4.jpg', x='-150', y='-150')
+  //- pattern#caleydoscope-pattern6(width='150', height='150', patternunits='userSpaceOnUse')
+  //-   image#js-caleydoscope-image6(width='300', height='300',xlink:href='css/i/caleydoscope5.jpg', x='-150', y='-150')
   pattern#wood-pattern(width='400', height='300', patternunits='userSpaceOnUse', y='200')
     image#js-wood-image(width='400', height='300', xlink:href='css/i/wood.jpg')
   pattern#space-dogs-pattern(width='200', height='150', patternunits='userSpaceOnUse', y='200')
