--- a/parts/meets.jade
+++ b/parts/meets.jade
@@ -13,9 +13,9 @@ defs
   pattern#cheese-pattern(width='400', height='300', patternunits='userSpaceOnUse', y='200')
     image#js-cheese-image(width='400', height='300', xlink:href='css/i/cheese.jpg')
   //- pattern#caleydoscope-pattern(width='150', height='150', patternunits='userSpaceOnUse')
-  //-   image#js-caleydoscope-image(width='300', height='300', xlink:href='css/i/caleydoscope.jpg', x='-150', y='-150')
-  //- pattern#caleydoscope-pattern2(width='150', height='150', patternunits='userSpaceOnUse')
-  //-   image#js-caleydoscope-image2(width='300', height='300', xlink:href='css/i/caleydoscope.jpg', x='-150', y='-150')
+    image#js-caleydoscope-image(width='300', height='300', xlink:href='css/i/caleydoscope.jpg', x='-150', y='-150')
+  pattern#caleydoscope-pattern2(width='150', height='150', patternunits='userSpaceOnUse')
+    image#js-caleydoscope-image2(width='300', height='300', xlink:href='css/i/caleydoscope.jpg', x='-150', y='-150')
   //-   //- image#js-caleydoscope-image2(width='300', height='300', xlink:href='css/i/caleydoscope.png', x='-150', y='-150')
   //- //- pattern#caleydoscope-pattern3(width='150', height='150', patternunits='userSpaceOnUse')
   //- //-   image#js-caleydoscope-image3(width='300', height='300', xlink:href='css/i/caleydoscope2.jpg', x='-150', y='-150')
