--- a/parts/caleydoscope.jade
+++ b/parts/caleydoscope.jade
@@ -4,7 +4,7 @@ g#js-entire-caleydoscope.h-g
     //- circle#js-c-mask2(r="25", fill="black", stroke="none", stroke-width="0", transform="translate(640,450)", opacity="0")
   g#js-c-blow(transform="translate(640,450)").h-g
     - for (var i = 0; i < 15; i++)
-      circle(r="0", fill="deeppink")
+      circle(r="0", fill="#{randColor()}")
 
   g#js-caleydoscope.caleydoscope(stroke='none', stroke-width='0', fill='none', fill-rule='evenodd')
     g(transform="translate(422,231)")
