--- a/parts/triangles.jade
+++ b/parts/triangles.jade
@@ -7,7 +7,7 @@ g#js-triangles.h-g
 
   mask#dust-mask
     include dust.svg
-  rect(id="js-slice-line", transform="scale(0) rotate(0)", opacity="0", height="2", width="400", x=340, y=450, fill="url(#owls-pattern)")
+  rect(id="js-slice-line", transform="scale(0) rotate(0)", opacity="0", height="2", width="400", x=340, y=450, fill="#012D27")
 
   rect(fill="url(#owls-pattern)", mask="url(#dust-mask)", width="1280", height="800")
 
