working on caleyd

--- a/css/main.css
+++ b/css/main.css
@@ -201,1017 +201,6 @@ clearfix:before {
 clearfix:after {
   clear: both;
 }
-.width-x1-g,
-.w-x1-g {
-  width: 10px;
-}
-.width-x2-g,
-.w-x2-g {
-  width: 20px;
-}
-.width-x3-g,
-.w-x3-g {
-  width: 30px;
-}
-.width-x4-g,
-.w-x4-g {
-  width: 40px;
-}
-.width-x5-g,
-.w-x5-g {
-  width: 50px;
-}
-.width-x6-g,
-.w-x6-g {
-  width: 60px;
-}
-.width-x7-g,
-.w-x7-g {
-  width: 70px;
-}
-.width-x8-g,
-.w-x8-g {
-  width: 80px;
-}
-.width-x9-g,
-.w-x9-g {
-  width: 90px;
-}
-.width-x10-g,
-.w-x10-g {
-  width: 100px;
-}
-.width-x11-g,
-.w-x11-g {
-  width: 110px;
-}
-.width-x12-g,
-.w-x12-g {
-  width: 120px;
-}
-.width-x13-g,
-.w-x13-g {
-  width: 130px;
-}
-.width-x14-g,
-.w-x14-g {
-  width: 140px;
-}
-.width-x15-g,
-.w-x15-g {
-  width: 150px;
-}
-.width-x16-g,
-.w-x16-g {
-  width: 160px;
-}
-.width-x17-g,
-.w-x17-g {
-  width: 170px;
-}
-.width-x18-g,
-.w-x18-g {
-  width: 180px;
-}
-.width-x19-g,
-.w-x19-g {
-  width: 190px;
-}
-.width-x20-g,
-.w-x20-g {
-  width: 200px;
-}
-.height-x1-g,
-.h-x1-g {
-  height: 10px;
-}
-.height-x2-g,
-.h-x2-g {
-  height: 20px;
-}
-.height-x3-g,
-.h-x3-g {
-  height: 30px;
-}
-.height-x4-g,
-.h-x4-g {
-  height: 40px;
-}
-.height-x5-g,
-.h-x5-g {
-  height: 50px;
-}
-.height-x6-g,
-.h-x6-g {
-  height: 60px;
-}
-.height-x7-g,
-.h-x7-g {
-  height: 70px;
-}
-.height-x8-g,
-.h-x8-g {
-  height: 80px;
-}
-.height-x9-g,
-.h-x9-g {
-  height: 90px;
-}
-.height-x10-g,
-.h-x10-g {
-  height: 100px;
-}
-.height-x11-g,
-.h-x11-g {
-  height: 110px;
-}
-.height-x12-g,
-.h-x12-g {
-  height: 120px;
-}
-.height-x13-g,
-.h-x13-g {
-  height: 130px;
-}
-.height-x14-g,
-.h-x14-g {
-  height: 140px;
-}
-.height-x15-g,
-.h-x15-g {
-  height: 150px;
-}
-.height-x16-g,
-.h-x16-g {
-  height: 160px;
-}
-.height-x17-g,
-.h-x17-g {
-  height: 170px;
-}
-.height-x18-g,
-.h-x18-g {
-  height: 180px;
-}
-.height-x19-g,
-.h-x19-g {
-  height: 190px;
-}
-.height-x20-g,
-.h-x20-g {
-  height: 200px;
-}
-.margin-left-x1-g,
-.m-l-x1-g {
-  margin-left: 10px;
-}
-.margin-right-x1-g,
-.m-r-x1-g {
-  margin-right: 10px;
-}
-.margin-top-x1-g,
-.m-t-x1-g {
-  margin-top: 10px;
-}
-.margin-bottom-x1-g,
-.m-b-x1-g {
-  margin-bottom: 10px;
-}
-.margin-x1-g,
-.m-x1-g {
-  margin: 10px;
-}
-.margin-left-x2-g,
-.m-l-x2-g {
-  margin-left: 20px;
-}
-.margin-right-x2-g,
-.m-r-x2-g {
-  margin-right: 20px;
-}
-.margin-top-x2-g,
-.m-t-x2-g {
-  margin-top: 20px;
-}
-.margin-bottom-x2-g,
-.m-b-x2-g {
-  margin-bottom: 20px;
-}
-.margin-x2-g,
-.m-x2-g {
-  margin: 20px;
-}
-.margin-left-x3-g,
-.m-l-x3-g {
-  margin-left: 30px;
-}
-.margin-right-x3-g,
-.m-r-x3-g {
-  margin-right: 30px;
-}
-.margin-top-x3-g,
-.m-t-x3-g {
-  margin-top: 30px;
-}
-.margin-bottom-x3-g,
-.m-b-x3-g {
-  margin-bottom: 30px;
-}
-.margin-x3-g,
-.m-x3-g {
-  margin: 30px;
-}
-.margin-left-x4-g,
-.m-l-x4-g {
-  margin-left: 40px;
-}
-.margin-right-x4-g,
-.m-r-x4-g {
-  margin-right: 40px;
-}
-.margin-top-x4-g,
-.m-t-x4-g {
-  margin-top: 40px;
-}
-.margin-bottom-x4-g,
-.m-b-x4-g {
-  margin-bottom: 40px;
-}
-.margin-x4-g,
-.m-x4-g {
-  margin: 40px;
-}
-.margin-left-x5-g,
-.m-l-x5-g {
-  margin-left: 50px;
-}
-.margin-right-x5-g,
-.m-r-x5-g {
-  margin-right: 50px;
-}
-.margin-top-x5-g,
-.m-t-x5-g {
-  margin-top: 50px;
-}
-.margin-bottom-x5-g,
-.m-b-x5-g {
-  margin-bottom: 50px;
-}
-.margin-x5-g,
-.m-x5-g {
-  margin: 50px;
-}
-.margin-left-x6-g,
-.m-l-x6-g {
-  margin-left: 60px;
-}
-.margin-right-x6-g,
-.m-r-x6-g {
-  margin-right: 60px;
-}
-.margin-top-x6-g,
-.m-t-x6-g {
-  margin-top: 60px;
-}
-.margin-bottom-x6-g,
-.m-b-x6-g {
-  margin-bottom: 60px;
-}
-.margin-x6-g,
-.m-x6-g {
-  margin: 60px;
-}
-.margin-left-x7-g,
-.m-l-x7-g {
-  margin-left: 70px;
-}
-.margin-right-x7-g,
-.m-r-x7-g {
-  margin-right: 70px;
-}
-.margin-top-x7-g,
-.m-t-x7-g {
-  margin-top: 70px;
-}
-.margin-bottom-x7-g,
-.m-b-x7-g {
-  margin-bottom: 70px;
-}
-.margin-x7-g,
-.m-x7-g {
-  margin: 70px;
-}
-.margin-left-x8-g,
-.m-l-x8-g {
-  margin-left: 80px;
-}
-.margin-right-x8-g,
-.m-r-x8-g {
-  margin-right: 80px;
-}
-.margin-top-x8-g,
-.m-t-x8-g {
-  margin-top: 80px;
-}
-.margin-bottom-x8-g,
-.m-b-x8-g {
-  margin-bottom: 80px;
-}
-.margin-x8-g,
-.m-x8-g {
-  margin: 80px;
-}
-.margin-left-x9-g,
-.m-l-x9-g {
-  margin-left: 90px;
-}
-.margin-right-x9-g,
-.m-r-x9-g {
-  margin-right: 90px;
-}
-.margin-top-x9-g,
-.m-t-x9-g {
-  margin-top: 90px;
-}
-.margin-bottom-x9-g,
-.m-b-x9-g {
-  margin-bottom: 90px;
-}
-.margin-x9-g,
-.m-x9-g {
-  margin: 90px;
-}
-.margin-left-x10-g,
-.m-l-x10-g {
-  margin-left: 100px;
-}
-.margin-right-x10-g,
-.m-r-x10-g {
-  margin-right: 100px;
-}
-.margin-top-x10-g,
-.m-t-x10-g {
-  margin-top: 100px;
-}
-.margin-bottom-x10-g,
-.m-b-x10-g {
-  margin-bottom: 100px;
-}
-.margin-x10-g,
-.m-x10-g {
-  margin: 100px;
-}
-.margin-left-x11-g,
-.m-l-x11-g {
-  margin-left: 110px;
-}
-.margin-right-x11-g,
-.m-r-x11-g {
-  margin-right: 110px;
-}
-.margin-top-x11-g,
-.m-t-x11-g {
-  margin-top: 110px;
-}
-.margin-bottom-x11-g,
-.m-b-x11-g {
-  margin-bottom: 110px;
-}
-.margin-x11-g,
-.m-x11-g {
-  margin: 110px;
-}
-.margin-left-x12-g,
-.m-l-x12-g {
-  margin-left: 120px;
-}
-.margin-right-x12-g,
-.m-r-x12-g {
-  margin-right: 120px;
-}
-.margin-top-x12-g,
-.m-t-x12-g {
-  margin-top: 120px;
-}
-.margin-bottom-x12-g,
-.m-b-x12-g {
-  margin-bottom: 120px;
-}
-.margin-x12-g,
-.m-x12-g {
-  margin: 120px;
-}
-.margin-left-x13-g,
-.m-l-x13-g {
-  margin-left: 130px;
-}
-.margin-right-x13-g,
-.m-r-x13-g {
-  margin-right: 130px;
-}
-.margin-top-x13-g,
-.m-t-x13-g {
-  margin-top: 130px;
-}
-.margin-bottom-x13-g,
-.m-b-x13-g {
-  margin-bottom: 130px;
-}
-.margin-x13-g,
-.m-x13-g {
-  margin: 130px;
-}
-.margin-left-x14-g,
-.m-l-x14-g {
-  margin-left: 140px;
-}
-.margin-right-x14-g,
-.m-r-x14-g {
-  margin-right: 140px;
-}
-.margin-top-x14-g,
-.m-t-x14-g {
-  margin-top: 140px;
-}
-.margin-bottom-x14-g,
-.m-b-x14-g {
-  margin-bottom: 140px;
-}
-.margin-x14-g,
-.m-x14-g {
-  margin: 140px;
-}
-.margin-left-x15-g,
-.m-l-x15-g {
-  margin-left: 150px;
-}
-.margin-right-x15-g,
-.m-r-x15-g {
-  margin-right: 150px;
-}
-.margin-top-x15-g,
-.m-t-x15-g {
-  margin-top: 150px;
-}
-.margin-bottom-x15-g,
-.m-b-x15-g {
-  margin-bottom: 150px;
-}
-.margin-x15-g,
-.m-x15-g {
-  margin: 150px;
-}
-.margin-left-x16-g,
-.m-l-x16-g {
-  margin-left: 160px;
-}
-.margin-right-x16-g,
-.m-r-x16-g {
-  margin-right: 160px;
-}
-.margin-top-x16-g,
-.m-t-x16-g {
-  margin-top: 160px;
-}
-.margin-bottom-x16-g,
-.m-b-x16-g {
-  margin-bottom: 160px;
-}
-.margin-x16-g,
-.m-x16-g {
-  margin: 160px;
-}
-.margin-left-x17-g,
-.m-l-x17-g {
-  margin-left: 170px;
-}
-.margin-right-x17-g,
-.m-r-x17-g {
-  margin-right: 170px;
-}
-.margin-top-x17-g,
-.m-t-x17-g {
-  margin-top: 170px;
-}
-.margin-bottom-x17-g,
-.m-b-x17-g {
-  margin-bottom: 170px;
-}
-.margin-x17-g,
-.m-x17-g {
-  margin: 170px;
-}
-.margin-left-x18-g,
-.m-l-x18-g {
-  margin-left: 180px;
-}
-.margin-right-x18-g,
-.m-r-x18-g {
-  margin-right: 180px;
-}
-.margin-top-x18-g,
-.m-t-x18-g {
-  margin-top: 180px;
-}
-.margin-bottom-x18-g,
-.m-b-x18-g {
-  margin-bottom: 180px;
-}
-.margin-x18-g,
-.m-x18-g {
-  margin: 180px;
-}
-.margin-left-x19-g,
-.m-l-x19-g {
-  margin-left: 190px;
-}
-.margin-right-x19-g,
-.m-r-x19-g {
-  margin-right: 190px;
-}
-.margin-top-x19-g,
-.m-t-x19-g {
-  margin-top: 190px;
-}
-.margin-bottom-x19-g,
-.m-b-x19-g {
-  margin-bottom: 190px;
-}
-.margin-x19-g,
-.m-x19-g {
-  margin: 190px;
-}
-.margin-left-x20-g,
-.m-l-x20-g {
-  margin-left: 200px;
-}
-.margin-right-x20-g,
-.m-r-x20-g {
-  margin-right: 200px;
-}
-.margin-top-x20-g,
-.m-t-x20-g {
-  margin-top: 200px;
-}
-.margin-bottom-x20-g,
-.m-b-x20-g {
-  margin-bottom: 200px;
-}
-.margin-x20-g,
-.m-x20-g {
-  margin: 200px;
-}
-.padding-left-x1-g,
-.p-l-x1-g {
-  padding-left: 10px;
-}
-.padding-right-x1-g,
-.p-r-x1-g {
-  padding-right: 10px;
-}
-.padding-top-x1-g,
-.p-t-x1-g {
-  padding-top: 10px;
-}
-.padding-bottom-x1-g,
-.p-b-x1-g {
-  padding-bottom: 10px;
-}
-.padding-x1-g,
-.p-x1-g {
-  padding: 10px;
-}
-.padding-left-x2-g,
-.p-l-x2-g {
-  padding-left: 20px;
-}
-.padding-right-x2-g,
-.p-r-x2-g {
-  padding-right: 20px;
-}
-.padding-top-x2-g,
-.p-t-x2-g {
-  padding-top: 20px;
-}
-.padding-bottom-x2-g,
-.p-b-x2-g {
-  padding-bottom: 20px;
-}
-.padding-x2-g,
-.p-x2-g {
-  padding: 20px;
-}
-.padding-left-x3-g,
-.p-l-x3-g {
-  padding-left: 30px;
-}
-.padding-right-x3-g,
-.p-r-x3-g {
-  padding-right: 30px;
-}
-.padding-top-x3-g,
-.p-t-x3-g {
-  padding-top: 30px;
-}
-.padding-bottom-x3-g,
-.p-b-x3-g {
-  padding-bottom: 30px;
-}
-.padding-x3-g,
-.p-x3-g {
-  padding: 30px;
-}
-.padding-left-x4-g,
-.p-l-x4-g {
-  padding-left: 40px;
-}
-.padding-right-x4-g,
-.p-r-x4-g {
-  padding-right: 40px;
-}
-.padding-top-x4-g,
-.p-t-x4-g {
-  padding-top: 40px;
-}
-.padding-bottom-x4-g,
-.p-b-x4-g {
-  padding-bottom: 40px;
-}
-.padding-x4-g,
-.p-x4-g {
-  padding: 40px;
-}
-.padding-left-x5-g,
-.p-l-x5-g {
-  padding-left: 50px;
-}
-.padding-right-x5-g,
-.p-r-x5-g {
-  padding-right: 50px;
-}
-.padding-top-x5-g,
-.p-t-x5-g {
-  padding-top: 50px;
-}
-.padding-bottom-x5-g,
-.p-b-x5-g {
-  padding-bottom: 50px;
-}
-.padding-x5-g,
-.p-x5-g {
-  padding: 50px;
-}
-.padding-left-x6-g,
-.p-l-x6-g {
-  padding-left: 60px;
-}
-.padding-right-x6-g,
-.p-r-x6-g {
-  padding-right: 60px;
-}
-.padding-top-x6-g,
-.p-t-x6-g {
-  padding-top: 60px;
-}
-.padding-bottom-x6-g,
-.p-b-x6-g {
-  padding-bottom: 60px;
-}
-.padding-x6-g,
-.p-x6-g {
-  padding: 60px;
-}
-.padding-left-x7-g,
-.p-l-x7-g {
-  padding-left: 70px;
-}
-.padding-right-x7-g,
-.p-r-x7-g {
-  padding-right: 70px;
-}
-.padding-top-x7-g,
-.p-t-x7-g {
-  padding-top: 70px;
-}
-.padding-bottom-x7-g,
-.p-b-x7-g {
-  padding-bottom: 70px;
-}
-.padding-x7-g,
-.p-x7-g {
-  padding: 70px;
-}
-.padding-left-x8-g,
-.p-l-x8-g {
-  padding-left: 80px;
-}
-.padding-right-x8-g,
-.p-r-x8-g {
-  padding-right: 80px;
-}
-.padding-top-x8-g,
-.p-t-x8-g {
-  padding-top: 80px;
-}
-.padding-bottom-x8-g,
-.p-b-x8-g {
-  padding-bottom: 80px;
-}
-.padding-x8-g,
-.p-x8-g {
-  padding: 80px;
-}
-.padding-left-x9-g,
-.p-l-x9-g {
-  padding-left: 90px;
-}
-.padding-right-x9-g,
-.p-r-x9-g {
-  padding-right: 90px;
-}
-.padding-top-x9-g,
-.p-t-x9-g {
-  padding-top: 90px;
-}
-.padding-bottom-x9-g,
-.p-b-x9-g {
-  padding-bottom: 90px;
-}
-.padding-x9-g,
-.p-x9-g {
-  padding: 90px;
-}
-.padding-left-x10-g,
-.p-l-x10-g {
-  padding-left: 100px;
-}
-.padding-right-x10-g,
-.p-r-x10-g {
-  padding-right: 100px;
-}
-.padding-top-x10-g,
-.p-t-x10-g {
-  padding-top: 100px;
-}
-.padding-bottom-x10-g,
-.p-b-x10-g {
-  padding-bottom: 100px;
-}
-.padding-x10-g,
-.p-x10-g {
-  padding: 100px;
-}
-.padding-left-x11-g,
-.p-l-x11-g {
-  padding-left: 110px;
-}
-.padding-right-x11-g,
-.p-r-x11-g {
-  padding-right: 110px;
-}
-.padding-top-x11-g,
-.p-t-x11-g {
-  padding-top: 110px;
-}
-.padding-bottom-x11-g,
-.p-b-x11-g {
-  padding-bottom: 110px;
-}
-.padding-x11-g,
-.p-x11-g {
-  padding: 110px;
-}
-.padding-left-x12-g,
-.p-l-x12-g {
-  padding-left: 120px;
-}
-.padding-right-x12-g,
-.p-r-x12-g {
-  padding-right: 120px;
-}
-.padding-top-x12-g,
-.p-t-x12-g {
-  padding-top: 120px;
-}
-.padding-bottom-x12-g,
-.p-b-x12-g {
-  padding-bottom: 120px;
-}
-.padding-x12-g,
-.p-x12-g {
-  padding: 120px;
-}
-.padding-left-x13-g,
-.p-l-x13-g {
-  padding-left: 130px;
-}
-.padding-right-x13-g,
-.p-r-x13-g {
-  padding-right: 130px;
-}
-.padding-top-x13-g,
-.p-t-x13-g {
-  padding-top: 130px;
-}
-.padding-bottom-x13-g,
-.p-b-x13-g {
-  padding-bottom: 130px;
-}
-.padding-x13-g,
-.p-x13-g {
-  padding: 130px;
-}
-.padding-left-x14-g,
-.p-l-x14-g {
-  padding-left: 140px;
-}
-.padding-right-x14-g,
-.p-r-x14-g {
-  padding-right: 140px;
-}
-.padding-top-x14-g,
-.p-t-x14-g {
-  padding-top: 140px;
-}
-.padding-bottom-x14-g,
-.p-b-x14-g {
-  padding-bottom: 140px;
-}
-.padding-x14-g,
-.p-x14-g {
-  padding: 140px;
-}
-.padding-left-x15-g,
-.p-l-x15-g {
-  padding-left: 150px;
-}
-.padding-right-x15-g,
-.p-r-x15-g {
-  padding-right: 150px;
-}
-.padding-top-x15-g,
-.p-t-x15-g {
-  padding-top: 150px;
-}
-.padding-bottom-x15-g,
-.p-b-x15-g {
-  padding-bottom: 150px;
-}
-.padding-x15-g,
-.p-x15-g {
-  padding: 150px;
-}
-.padding-left-x16-g,
-.p-l-x16-g {
-  padding-left: 160px;
-}
-.padding-right-x16-g,
-.p-r-x16-g {
-  padding-right: 160px;
-}
-.padding-top-x16-g,
-.p-t-x16-g {
-  padding-top: 160px;
-}
-.padding-bottom-x16-g,
-.p-b-x16-g {
-  padding-bottom: 160px;
-}
-.padding-x16-g,
-.p-x16-g {
-  padding: 160px;
-}
-.padding-left-x17-g,
-.p-l-x17-g {
-  padding-left: 170px;
-}
-.padding-right-x17-g,
-.p-r-x17-g {
-  padding-right: 170px;
-}
-.padding-top-x17-g,
-.p-t-x17-g {
-  padding-top: 170px;
-}
-.padding-bottom-x17-g,
-.p-b-x17-g {
-  padding-bottom: 170px;
-}
-.padding-x17-g,
-.p-x17-g {
-  padding: 170px;
-}
-.padding-left-x18-g,
-.p-l-x18-g {
-  padding-left: 180px;
-}
-.padding-right-x18-g,
-.p-r-x18-g {
-  padding-right: 180px;
-}
-.padding-top-x18-g,
-.p-t-x18-g {
-  padding-top: 180px;
-}
-.padding-bottom-x18-g,
-.p-b-x18-g {
-  padding-bottom: 180px;
-}
-.padding-x18-g,
-.p-x18-g {
-  padding: 180px;
-}
-.padding-left-x19-g,
-.p-l-x19-g {
-  padding-left: 190px;
-}
-.padding-right-x19-g,
-.p-r-x19-g {
-  padding-right: 190px;
-}
-.padding-top-x19-g,
-.p-t-x19-g {
-  padding-top: 190px;
-}
-.padding-bottom-x19-g,
-.p-b-x19-g {
-  padding-bottom: 190px;
-}
-.padding-x19-g,
-.p-x19-g {
-  padding: 190px;
-}
-.padding-left-x20-g,
-.p-l-x20-g {
-  padding-left: 200px;
-}
-.padding-right-x20-g,
-.p-r-x20-g {
-  padding-right: 200px;
-}
-.padding-top-x20-g,
-.p-t-x20-g {
-  padding-top: 200px;
-}
-.padding-bottom-x20-g,
-.p-b-x20-g {
-  padding-bottom: 200px;
-}
-.padding-x20-g,
-.p-x20-g {
-  padding: 200px;
-}
-.c-blue1-bg-g {
-  background-color: #416c7d;
-}
-.c-blue2-bg-g {
-  background-color: #7bb9d0;
-}
-.c-blue3-bg-g {
-  background-color: #5adcff;
-}
-.c-facebook-bg-g {
-  background-color: #3b5998;
-}
-.c-linkedin-bg-g {
-  background-color: #007ab8;
-}
-.c-twitter-bg-g {
-  background-color: #00acff;
-}
-.c-google-bg-g {
-  background-color: #df4a32;
-}
-.c-grey1-bg-g {
-  background-color: #111;
-}
-.c-grey2-bg-g {
-  background-color: #2d2d2d;
-}
-.c-grey3-bg-g {
-  background-color: #494949;
-}
-.c-grey4-bg-g {
-  background-color: #656565;
-}
-.c-grey5-bg-g {
-  background-color: #818181;
-}
-.c-grey6-bg-g {
-  background-color: #9d9d9d;
-}
-.c-grey7-bg-g {
-  background-color: #b9b9b9;
-}
-.c-grey8-bg-g {
-  background-color: #d5d5d5;
-}
-.c-grey9-bg-g {
-  background-color: #f1f1f1;
-}
-.c-grey10-bg-g {
-  background-color: #f9f9f9;
-}
 .sidebar li {
   font-size: 16px;
   line-height: 26px;
@@ -1644,6 +633,11 @@ html,
 body {
   width: 100%;
   height: 100%;
+}
+.z-hack {
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
 }
 .tri-bits g {
   display: none;
