--- a/index.jade
+++ b/index.jade
@@ -18,6 +18,7 @@ html
       .container__inner
         svg(viewBox="0 0 1280 900")
           include parts/meets
+        svg(viewBox="0 0 1280 900").z-hack
           include parts/caleydoscope
           include parts/svg
           include parts/triangles
