--- a/parts/meets.jade
+++ b/parts/meets.jade
@@ -18,10 +18,10 @@ defs
     image#js-wood-image(width='400', height='300', xlink:href='css/i/wood.jpg')
   pattern#space-dogs-pattern(width='200', height='150', patternunits='userSpaceOnUse', y='200')
     image#js-space-dogs-image(width='400', height='300', xlink:href='css/i/space-dogs.jpg')
-  pattern#rose-pattern(width='175', height='175', patternunits='userSpaceOnUse', y='175')
-    image#js-rose-image(width='175', height='175', xlink:href='css/i/flowers-roses.jpg')
-  pattern#blue-flowers-pattern(width='375', height='250.5', patternunits='userSpaceOnUse', x='0', y='200')
-    image#js-blue-image(width='375', height='250.5', xlink:href='css/i/flowers-blue.jpg')
+  //- pattern#rose-pattern(width='175', height='175', patternunits='userSpaceOnUse', y='175')
+  //-   image#js-rose-image(width='175', height='175', xlink:href='css/i/flowers-roses.jpg')
+  //- pattern#blue-flowers-pattern(width='375', height='250.5', patternunits='userSpaceOnUse', x='0', y='200')
+    //- image#js-blue-image(width='375', height='250.5', xlink:href='css/i/flowers-blue.jpg')
   filter#f_multiply(filterunits='objectBoundingBox', x='0%', y='0%', width='100%', height='100%')
     feflood(x='0', y='0', width='96', height='32', flood-color='#EA312F', result='a')
     feflood(x='0', y='50', width='96', height='32', flood-color='#EA312F', result='b')
@@ -38,18 +38,18 @@ defs
 g#js-meets.h-g1
   - var blue = '#1F2947'
   //- mask#burst-mask
-  g#js-meets-burst(transform="translate(0,10)")
-    - var burstLen = 35, burstStart = 100
-    - var cnt = 7, PI = 3.141598, rotateStep = 360/cnt, rotateAngle = 0;
-    - var centerX = 640, centerY = 450, radius = burstStart, radius2 = burstStart + burstLen, angle = 50;
-    - var step = (2*PI)/cnt, initRotate = 40;
-    - for (var i = 0; i < cnt; i++)
-      - var x1 = centerX + Math.cos(angle)*radius
-      - var y1 = centerY + Math.sin(angle)*radius
-      - var x2 = centerX + Math.cos(angle)*radius2
-      - var y2 = centerY + Math.sin(angle)*radius2
-      path(d="M#{x1},#{y1} L#{x2},#{y2}", opacity="1", stroke-dashoffset="#{burstLen+1}", stroke-dasharray="#{burstLen+1}", stroke="#{randColor()}", stroke-width="8", stroke-linecap="round")
-      - angle = angle + step
+  //- g#js-meets-burst(transform="translate(0,10)")
+  //-   - var burstLen = 35, burstStart = 100
+  //-   - var cnt = 7, PI = 3.141598, rotateStep = 360/cnt, rotateAngle = 0;
+  //-   - var centerX = 640, centerY = 450, radius = burstStart, radius2 = burstStart + burstLen, angle = 50;
+  //-   - var step = (2*PI)/cnt, initRotate = 40;
+  //-   - for (var i = 0; i < cnt; i++)
+  //-     - var x1 = centerX + Math.cos(angle)*radius
+  //-     - var y1 = centerY + Math.sin(angle)*radius
+  //-     - var x2 = centerX + Math.cos(angle)*radius2
+  //-     - var y2 = centerY + Math.sin(angle)*radius2
+  //-     path(d="M#{x1},#{y1} L#{x2},#{y2}", opacity="1", stroke-dashoffset="#{burstLen+1}", stroke-dasharray="#{burstLen+1}", stroke="#{randColor()}", stroke-width="8", stroke-linecap="round")
+  //-     - angle = angle + step
 
   //- g#js-firework.h-g(transform="translate(30,-135)", fill="none", stroke="url(#wood-pattern)", stroke-width="8")
   //-   path#Fill-2(stroke="#{randColor()}", opacity="#{rand(0, 3)/10}", stroke-linecap="round" d='M101,360.426 C155.592,358.97 210.631,358.994 264.44,369.481 C320.229,380.355 371.323,403.913 419.132,434.2 C485.658,476.345 544.614,529.172 610.663,572.02')
@@ -81,7 +81,7 @@ g#js-meets.h-g1
         - angle = angle + step
 
   g(stroke="none", stroke-width="1", fill="none", fill-rule="evenodd", transform="translate(23,130)")
-    g#js-meets-text(transform="translate(490, 50)", fill="url(#space-dogs-pattern)").h-g1
+    g#js-meets-text(transform="translate(490, 50)", fill="url(#space-dogs-pattern)")
       path#Mask(d="M47.28,91 L66.36,91 L66.36,5.32 L46.08,5.32 L35.04,50.2 L23.88,5.32 L3.6,5.32 L3.6,91 L22.68,91 L22.68,52.36 L29.16,91 L41.04,91 L47.28,52.36 L47.28,91 Z M92.64,22 L113.4,22 L113.4,5.32 L73.56,5.32 L73.56,91 L113.4,91 L113.4,74.32 L92.64,74.32 L92.64,55.6 L107.4,55.6 L107.4,38.92 L92.64,38.92 L92.64,22 Z M139.68,22 L160.44,22 L160.44,5.32 L120.6,5.32 L120.6,91 L160.44,91 L160.44,74.32 L139.68,74.32 L139.68,55.6 L154.44,55.6 L154.44,38.92 L139.68,38.92 L139.68,22 Z M203.88,22 L221.04,22 L221.04,5.32 L167.64,5.32 L167.64,22 L184.8,22 L184.8,91 L203.88,91 L203.88,22 Z M253.32,20.56 C256.32,20.56 256.8,23.2 256.8,33.64 L277.68,33.64 C277.68,16 271.32,3.88 253.8,3.88 C234.36,3.88 229.32,10.84 229.32,28.48 C229.32,54.16 256.2,52.12 256.2,67.96 C256.2,72.76 255.72,75.76 252.84,75.76 C249.12,75.76 249.12,69.4 249.12,61.72 L228.24,61.72 C228.24,79.36 232.2,92.44 252.84,92.44 C274.92,92.44 277.08,82.48 277.08,68.08 C277.08,43.12 249.72,44.08 249.72,28.96 C249.72,22.12 250.68,20.56 253.32,20.56 L253.32,20.56 Z", fill-opacity="0.1")
       path#Mask(d="M43.28,87 L62.36,87 L62.36,1.32 L42.08,1.32 L31.04,46.2 L19.88,1.32 L-0.4,1.32 L-0.4,87 L18.68,87 L18.68,48.36 L25.16,87 L37.04,87 L43.28,48.36 L43.28,87 Z M88.64,18 L109.4,18 L109.4,1.32 L69.56,1.32 L69.56,87 L109.4,87 L109.4,70.32 L88.64,70.32 L88.64,51.6 L103.4,51.6 L103.4,34.92 L88.64,34.92 L88.64,18 Z M135.68,18 L156.44,18 L156.44,1.32 L116.6,1.32 L116.6,87 L156.44,87 L156.44,70.32 L135.68,70.32 L135.68,51.6 L150.44,51.6 L150.44,34.92 L135.68,34.92 L135.68,18 Z M199.88,18 L217.04,18 L217.04,1.32 L163.64,1.32 L163.64,18 L180.8,18 L180.8,87 L199.88,87 L199.88,18 Z M249.32,16.56 C252.32,16.56 252.8,19.2 252.8,29.64 L273.68,29.64 C273.68,12 267.32,-0.12 249.8,-0.12 C230.36,-0.12 225.32,6.84 225.32,24.48 C225.32,50.16 252.2,48.12 252.2,63.96 C252.2,68.76 251.72,71.76 248.84,71.76 C245.12,71.76 245.12,65.4 245.12,57.72 L224.24,57.72 C224.24,75.36 228.2,88.44 248.84,88.44 C270.92,88.44 273.08,78.48 273.08,64.08 C273.08,39.12 245.72,40.08 245.72,24.96 C245.72,18.12 246.68,16.56 249.32,16.56 L249.32,16.56 Z")
     g#right-hand(transform="translate(614.000000, 271.000000)")
@@ -95,8 +95,9 @@ g#js-meets.h-g1
      
         rect.js-sleeve(fill-opacity="0.1", fill="#000000", x="139", y="25", width="27", height="75", rx="5")
         rect.js-sleeve(fill="#FFFFFF", x="143", y="20", width="27", height="80", rx="5")
-
-        rect#js-right-shirt.js-shirt(transform="translate(-614.000000, -271.000000)", x="1570", fill="url(#blue-flowers-pattern)", rx="5", x2="770", y="288", width="282", height="97")
+        
+        image#js-right-shirt(width='292', height='97', xlink:href='css/i/flowers-blue-shirt.jpg', rx="5", x2="155", x="1575", y="12")
+        //- rect#js-right-shirt.js-shirt(transform="translate(-614.000000, -271.000000)", x="1570", fill="url(#blue-flowers-pattern)", rx="5", x2="770", y="288", width="282", height="97")
 
         rect#fist-mask(transform="translate(100,42.5)", fill="#FBF7E8", width="40", height="39")
         
@@ -117,8 +118,8 @@ g#js-meets.h-g1
         rect.js-sleeve(fill-opacity="0.1", fill="#000000", x="139", y="18", width="27", height="75", rx="5")
         rect.js-sleeve(fill="#FFFFFF", x="143", y="17", width="27", height="80", rx="5")
         rect#fist-mask(transform="translate(100,40)", fill="#FBF7E8", width="40", height="38.5")
-
-      rect#js-left-shirt.js-shirt(transform="translate(-26,-270)", x="1500", rx="5", fill="url(#rose-pattern)", x2="183", y="280", width="282", height="97")
+      image#js-left-shirt(width='292', height='97', xlink:href='css/i/flowers-roses-shirt.jpg', rx="5", x2="155", x="2000", y="8")
+      //- rect#js-left-shirt.js-shirt(transform="translate(-26,-270)", x="2000", rx="5", fill="url(#rose-pattern)", x2="183", y="280", width="282", height="97")
     g#gradient-group-left(transform="translate(312.000000, 322.000000) rotate(-180.000000) translate(-312.000000, -322.000000) translate(3.000000, 260.000000)")
       rect#white-gradient(fill="url(#linearGradient-1)", x="264", y="-100", width="177", height="300")
       rect#white-rect(fill="#FFFFFF", x="441", y="-100", width="300", height="300")
