working on waves

--- a/index.jade
+++ b/index.jade
@@ -24,6 +24,7 @@ html
           include parts/triangles
           include parts/tri-bits
           include parts/logo.svg
+        svg(viewBox="0 0 1280 900").z-hack
           include parts/waves.svg
           include parts/fish
           include parts/mushroom.svg
