--- a/parts/meets.jade
+++ b/parts/meets.jade
@@ -16,8 +16,8 @@ defs
     image#js-caleydoscope-image2(width='300', height='300', xlink:href='css/i/caleydoscope.jpg', x='-150', y='-150')
   pattern#wood-pattern(width='400', height='300', patternunits='userSpaceOnUse', y='200')
     image#js-wood-image(width='400', height='300', xlink:href='css/i/wood.jpg')
-  pattern#space-dogs-pattern(width='200', height='150', patternunits='userSpaceOnUse', y='200')
-    image#js-space-dogs-image(width='400', height='300', xlink:href='css/i/space-dogs.jpg')
+  pattern#space-dogs-pattern(width='300', height='468', patternunits='userSpaceOnUse', y='0')
+    image#js-space-dogs-image(width='300', height='468', xlink:href='css/i/space-dogs2.jpg')
   //- pattern#rose-pattern(width='175', height='175', patternunits='userSpaceOnUse', y='175')
   //-   image#js-rose-image(width='175', height='175', xlink:href='css/i/flowers-roses.jpg')
   //- pattern#blue-flowers-pattern(width='375', height='250.5', patternunits='userSpaceOnUse', x='0', y='200')
