--- a/parts/triangles.jade
+++ b/parts/triangles.jade
@@ -1,18 +1,22 @@
 g#js-triangles.h-g
-  rect.rect#js-flowers-cream(fill="url(#flowers-cream-pattern)", width="300", height="300", x="490", y="-600")      
+  image#js-flowers-cream(width="300", height="300", x="490", y="-600", xlink:href="css/i/flowers-cream.jpg")
+  //- rect.rect#js-flowers-cream(fill="url(#flowers-cream-pattern)", width="300", height="300", x="490", y="-600")      
   g#js-cream-triangles.h-g
-    path#js-cream-triangle1(d="M0,0 L0,300 L300,0 L0,0 Z", fill="url(#flowers-cream-pattern)")
+    image#js-cream-triangle1(width="300", height="300", xlink:href="css/i/flowers-cream-left.png")
+    //- path#js-cream-triangle1(d="M0,0 L0,300 L300,0 L0,0 Z", fill="url(#flowers-cream-pattern)")
     g#js-cream-triangle2-wrapper
-      path#js-cream-triangle2(d="M0,300 L300,300 L300,0 L0,300 Z", fill="url(#flowers-cream-pattern)")
+      image#js-cream-triangle1(width="300", height="300", xlink:href="css/i/flowers-cream-right.png")
+      //- path#js-cream-triangle2(d="M0,300 L300,300 L300,0 L0,300 Z", fill="url(#flowers-cream-pattern)")
 
-  mask#dust-mask
-    include dust.svg
+  //- mask#dust-mask
+  include dust.svg
+
   rect(id="js-slice-line", transform="scale(0) rotate(0)", opacity="0", height="2", width="400", x=340, y=450, fill="#012D27")
 
-  rect(fill="url(#owls-pattern)", mask="url(#dust-mask)", width="1280", height="800")
+  //- rect(fill="url(#owls-pattern)", mask="url(#dust-mask)", width="1280", height="800")
 
   //- mask#div-sparks-mask
-  g#js-div-sparks.h-g(stroke="red", stroke-width="1", transform="translate(235,50)")
+  g#js-div-sparks.h-g(stroke="deeppink", stroke-width="1", transform="translate(235,50)")
     path#Path-1(d="M774.768438,-0.312275905 L458.962027,337.084693")
     path#Path-2(d="M629.534911,164.827713 L459.892692,333.790631")
     path#Path-3(d="M695.730037,149.127504 L460.937316,334.955134")
