working on fish

--- a/index.jade
+++ b/index.jade
@@ -23,9 +23,11 @@ html
           include parts/svg
           include parts/triangles
           include parts/tri-bits
-          include parts/logo.svg
         svg(viewBox="0 0 1280 900").z-hack
           include parts/waves.svg
+        svg(viewBox="0 0 1280 900").z-hack
+          include parts/logo.svg
+        svg(viewBox="0 0 1280 900").z-hack
           include parts/fish
           include parts/mushroom.svg
 
